--- a/website/map/css/map.css
+++ b/website/map/css/map.css
@@ -1,4 +1,7 @@
-html, body, main, aside {
+html,
+body,
+main,
+aside {
   width: 100%;
   height: 100%;
   padding: 0;
@@ -14,10 +17,44 @@ html, body, main, aside {
   outline: 5px auto -webkit-focus-ring-color;
 }
 
-.map {
+.map-container {
   width: 100%;
   height: 100%;
   background-color: transparent;
+  display: flex;
+}
+
+.map {
+  top: 0;
+  bottom: 0;
+  width: 100%;
+}
+
+#map .mapboxgl-compare .compare-swiper-vertical {
+  background-image: none;
+  background: none;
+  border: none;
+  box-shadow: none;
+  top: 0;
+  bottom: 0;
+  height: auto;
+}
+
+.mapboxgl-compare .compare-swiper-vertical:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 6px;
+  background-color: #fffdfd;
+  bottom: 0;
+  left: 27px;
+  box-shadow: 0 0 3px rgb(0 0 0 / 32%);
+  z-index: -10;
+}
+
+.mapboxgl-compare .compare-swiper-vertical:hover:before {
+  box-shadow: 0 0 3px rgb(0 0 0 / 64%);
+
 }
 
 .map__controls {
@@ -55,5 +92,5 @@ html, body, main, aside {
 }
 
 .map.texturemap-on .mapboxgl-canvas {
-    /*filter: grayscale(1);*/
+  /*filter: grayscale(1);*/
 }
