--- a/website/css/main.css
+++ b/website/css/main.css
@@ -88,16 +88,17 @@ blockquote {
    ========================================================================== */
 
 :root {
-  --color-gray-500: #272431;
-  --color-gray-400: #5c5676;
-  --color-primary-500: #016a4c;
-  --color-primary-400: #01845f;
+  --color-gray-500: #eae3da;
+  --color-gray-400: #eae3da;
+  --color-primary-500: #b1e2e7;
+  --color-primary-400: #85d1d8;
   --font-size-500: 64px;
   --font-size-400: 48px;
   --font-size-300: 25px;
   --font-size-200: 20px;
   --font-size-100: 18px;
   --font-size-50: 16px;
+  --background-color: #16181d;
   --container-width: 1300px;
   --font-family: "Atlas Grotesk Web", -apple-system, BlinkMacSystemFont,
     avenir next, avenir, segoe ui, helvetica neue, helvetica, Ubuntu, roboto,
@@ -140,6 +141,7 @@ body {
   line-height: 1.6;
   color: var(--color-gray-400);
   text-rendering: optimizeLegibility;
+  background-color: var(--background-color);
 }
 
 html.simulate-monochromacy {
@@ -367,7 +369,7 @@ html.simulate-monochromacy .header-primary__button {
   text-align: center;
   color: var(--color-gray-500);
   padding: 40px 0;
-  border-top: 1px solid #c8c4d4;
+  border-top: 1px solid #2c303a;
 }
 
 .footer__logo {
@@ -425,8 +427,8 @@ html.simulate-monochromacy .header-primary__button {
    ========================================================================== */
 
 .map {
-  height: 80vh;
-  background-color: #fff;
+  height: 75vh;
+  background-color: transparent;
   overflow: hidden;
   margin: 40px 20px 0;
   transition: 0.2s ease-in-out;
@@ -470,15 +472,15 @@ html.simulate-monochromacy .header-primary__button {
 .hero__button-gettingstarted {
   background-color: var(--color-primary-400);
   border: 2px solid var(--color-primary-400);
-  color: #fff;
+  color: var(--background-color);
   text-decoration: none;
   font-weight: 500;
   margin-right: 10px;
-  width: 160px;
+  width: 180px;
   display: inline-block;
   text-align: center;
   line-height: 0;
-  padding: 23px 0 23px;
+  padding: 27px 0;
   transition: 100ms ease-in-out all;
 }
 
@@ -488,11 +490,11 @@ html.simulate-monochromacy .header-primary__button {
   color: var(--color-primary-400);
   text-decoration: none;
   font-weight: 500;
-  width: 160px;
+  width: 180px;
   display: inline-block;
   text-align: center;
   line-height: 0;
-  padding: 23px 0 23px;
+  padding: 27px 0;
   transition: 100ms ease-in-out all;
 }
 
@@ -500,7 +502,7 @@ html.simulate-monochromacy .header-primary__button {
 .hero__button-download:hover {
   background-color: var(--color-primary-500);
   border-color: var(--color-primary-500);
-  color: #fff;
+  color: var(--background-color);
 }
 
 @media only screen and (max-width: 768px) {
@@ -560,7 +562,6 @@ html.simulate-monochromacy .header-primary__button {
   margin: 0;
   z-index: 2;
   position: relative;
-  background-color: #fff;
 }
 
 .types__links {
@@ -578,7 +579,7 @@ html.simulate-monochromacy .header-primary__button {
 }
 
 .types__item {
-  background-color: #fff;
+  background-color: transparent;
   padding: 20px 0 0;
   flex: 1;
   column-gap: 40px;
