--- a/website/css/main.css
+++ b/website/css/main.css
@@ -186,6 +186,13 @@ h4:first-child {
   margin-top: 0;
 }
 
+h1 {
+  font-size: 0;
+  margin: 0;
+  padding: 0;
+  line-height: 0;
+}
+
 .container {
   max-width: 1300px;
   margin-left: auto;
@@ -277,8 +284,14 @@ img {
 }
 
 .header-primary__container {
-  display: flex;
+  text-align: center;
   padding: 30px 15px;
+}
+
+@media only screen and (max-width: 560px) {
+  .header-primary__container {
+    text-align: left;
+  }
 }
 
 .header-primary__logo {
@@ -636,7 +649,7 @@ html.simulate-monochromacy .header-primary__button {
    ========================================================================== */
 
 .section-accessibility {
-  padding: 0 0 80px;
+  padding: 0 0 120px;
   display: flex;
 }
 
