--- a/website/map/css/map.css
+++ b/website/map/css/map.css
@@ -42,7 +42,7 @@ aside {
 
 .map-label {
   position: absolute;
-  bottom: 0;
+  bottom: 10px;
   margin-left: auto;
   margin-right: auto;
   left: 0;
