Update text color

--- a/website/css/main.css
+++ b/website/css/main.css
@@ -88,7 +88,7 @@ blockquote {
    ========================================================================== */
 
 :root {
-  --color-gray-500: #dbdbdb;
+  --color-gray-500: #fff;
   --color-gray-400: #a3a3a3;
   --color-primary-500: #b28600;
   --color-primary-400: #d2a106;
