--- a/website/css/main.css
+++ b/website/css/main.css
@@ -88,8 +88,8 @@ blockquote {
    ========================================================================== */
 
 :root {
-  --color-gray-500: #dbdbdb;
-  --color-gray-400: #a3a3a3;
+  --color-gray-500: #f0f0f0;
+  --color-gray-400: #dbdbdb;
   --color-primary-500: #b28600;
   --color-primary-400: #d2a106;
   --font-size-500: 64px;
