--- a/website/css/main.css
+++ b/website/css/main.css
@@ -74,7 +74,7 @@ textarea {
 }
 
 blockquote {
-  border-left: 4px solid var(--color-gray-500);
+  border-left: 1px solid var(--color-gray-500);
   margin-left: 0;
   padding-left: 1em;
 }
@@ -88,19 +88,22 @@ blockquote {
    ========================================================================== */
 
 :root {
-  --color-gray-500: #f0f0f0;
-  --color-gray-400: #dbdbdb;
-  --color-primary-500: hsl(237deg 100% 71%);
-  --color-primary-400: hsl(237deg 100% 81%);
+  --color-gray-500: #fff;
+  --color-gray-400: #fff;
+  --color-primary-500: #3940d0;
+  --color-primary-400: #4d54d5;
 
-  --font-size-500: 64px;
-  --font-size-400: 48px;
-  --font-size-300: 25px;
-  --font-size-200: 20px;
-  --font-size-100: 18px;
-  --font-size-50: 16px;
-  --background-color: #18191b;
-  --container-width: 1500px;
+  accent-color: var(--color-primary-400);
+
+  --font-size-500: clamp(53.33px, 5.39vw, 97.02px);
+  --font-size-400: clamp(39.47px, 4.004vw, 72.072px);
+  --font-size-300: clamp(29.21px, 2.926vw, 52.668px);
+  --font-size-200: clamp(21.62px, 2.156vw, 38.808px);
+  --font-size-100: clamp(16px, 1.617vw, 29.106px);
+  --font-size-50: clamp(16px, 1.155vw, 20.79px);
+
+  --background-color-primary: #151515;
+  --background-color-secondary: #1f1f1f;
   --font-family: "Atlas Grotesk Web", -apple-system, BlinkMacSystemFont,
     avenir next, avenir, segoe ui, helvetica neue, helvetica, Ubuntu, roboto,
     noto, arial, sans-serif;
@@ -139,10 +142,13 @@ body {
   font-size: var(--font-size-100);
   font-family: var(--font-family);
   font-weight: 400;
-  line-height: 1.6;
+  line-height: 1.5;
   color: var(--color-gray-400);
-  text-rendering: geometricPrecision;
-  background-color: var(--background-color);
+  background-color: var(--background-color-primary);
+}
+
+#body:not(.monochromacy-off) #map {
+  filter: grayscale(100%);
 }
 
 html.simulate-monochromacy {
@@ -170,14 +176,15 @@ p:last-child {
 
 p.large {
   font-size: var(--font-size-200);
+  margin-bottom: 18px;
 }
 
 h1,
 h2,
 h3,
 h4 {
-  font-weight: 500;
-  line-height: 1.2;
+  font-weight: 600;
+  line-height: 1.1;
   color: var(--color-gray-500);
 }
 
@@ -196,10 +203,10 @@ h1 {
 }
 
 .container {
-  max-width: 1300px;
+  max-width: 1800px;
   margin-left: auto;
   margin-right: auto;
-  padding: 0 15px;
+  padding: 0 30px;
 }
 
 img {
@@ -219,6 +226,7 @@ img {
   }
   p.large {
     font-size: var(--font-size-100);
+    margin-bottom: 18px;
   }
 }
 
@@ -254,27 +262,27 @@ img {
 @media only screen and (max-width: 560px) {
   .heading-size--500 {
     font-size: 36px;
-    margin-bottom: 24px;
+    margin-bottom: 18px;
   }
 
   .heading-size--400 {
     font-size: var(--font-size-300);
-    margin-bottom: 18px;
+    margin-bottom: 16px;
   }
 
   .heading-size--300 {
     font-size: var(--font-size-200);
-    margin-bottom: 16px;
+    margin-bottom: 14px;
   }
 
   .heading-size--200 {
     font-size: var(--font-size-100);
-    margin-bottom: 16px;
+    margin-bottom: 14px;
   }
 
   .heading-size--100 {
     font-size: var(--font-size-50);
-    margin-bottom: 16px;
+    margin-bottom: 12px;
   }
 }
 
@@ -286,17 +294,12 @@ img {
 }
 
 .header-primary__container {
-  text-align: center;
-  padding: 30px 15px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
-@media only screen and (max-width: 560px) {
-  .header-primary__container {
-    text-align: left;
-  }
-}
-
-.header-primary__logo {
+.header-primary__logo img {
+  width: clamp(180px, 15.7vw, 340px);
 }
 
 .header-primary__nav {
@@ -307,12 +310,15 @@ img {
 }
 
 .header-primary__link {
-  margin-left: 10px;
   text-decoration: none;
   font-size: var(--font-size-50);
   font-weight: 500;
   background: none;
   color: var(--color-gray-500);
+}
+
+.header-primary__link:not(:first-child) {
+  margin-left: 10px;
 }
 
 .header-primary__button {
@@ -327,19 +333,6 @@ img {
   padding: 8px 10px;
   cursor: pointer;
   box-shadow: 0 1px 6px 0 rgb(0 0 0 / 6%), 0 2px 32px 0 rgb(0 0 0 / 16%);
-}
-
-.simulate-button {
-  position: fixed;
-  z-index: 200000000;
-  bottom: 20px;
-  right: 0;
-  left: 0;
-  max-width: var(--container-width);
-  margin-left: auto;
-  margin-right: auto;
-  text-align: right;
-  padding: 0 15px;
 }
 
 @media only screen and (max-width: 560px) {
@@ -381,9 +374,35 @@ html.simulate-monochromacy .header-primary__button {
    ========================================================================== */
 
 .footer-primary {
-  text-align: center;
   color: var(--color-gray-500);
   padding: 0;
+  background-color: var(--background-color-secondary);
+  padding: 40px 0;
+}
+
+.footer-links {
+  text-align: right;
+  flex: 1;
+}
+
+.footer-links ul {
+  margin: 0;
+  padding: 0;
+}
+
+.footer-links li {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+}
+
+.footer-links li:not(:first-child) {
+  margin-left: 1em;
+}
+
+.footer-primary .container {
+  display: flex;
+  gap: 4vw;
 }
 
 .footer__logo {
@@ -394,7 +413,6 @@ html.simulate-monochromacy .header-primary__button {
 .footer__brand {
   font-weight: 500;
   font-size: var(--font-size-50);
-  align-items: center;
   display: flex;
 }
 
@@ -416,9 +434,6 @@ html.simulate-monochromacy .header-primary__button {
 }
 
 @media only screen and (max-width: 560px) {
-  .footer-primary {
-    padding: 0;
-  }
   .footer-primary__container {
     display: flex;
     padding: 28px 15px 24px;
@@ -433,6 +448,9 @@ html.simulate-monochromacy .header-primary__button {
 }
 
 @media only screen and (max-width: 560px) {
+  .header-primary__container {
+    text-align: left;
+  }
   .footer-primary__link {
     font-size: var(--font-size-50);
   }
@@ -442,12 +460,15 @@ html.simulate-monochromacy .header-primary__button {
    ========================================================================== */
 
 .map {
-  height: 75vh;
+  height: 400px;
+  min-height: 100%;
   background-color: transparent;
   overflow: hidden;
-  margin: 40px 20px 0;
+  margin: 0;
+  margin-right: -35px;
   transition: 0.2s ease-in-out;
-  border-radius: 2px;
+  border-radius: 5px;
+  border-top: #2e2e2e solid 3vw;
 }
 
 .map__iframe {
@@ -467,60 +488,68 @@ html.simulate-monochromacy .header-primary__button {
    ========================================================================== */
 
 .hero {
+  display: flex;
+  gap: 4vw;
 }
 
 .section-hero {
   margin-top: 0;
   padding-top: 40px;
+  overflow: hidden;
+  position: relative;
 }
 
 .hero__content {
-  max-width: 680px;
-  text-align: center;
+  flex-basis: 50%;
   margin: 0 auto;
+  padding-bottom: 80px;
+}
+
+.hero__map {
+  flex-basis: 50%;
 }
 
 .hero__buttons {
   margin-top: 34px;
-  font-size: var(--font-size-200);
+  font-size: var(--font-size-100);
 }
 
 .hero__button-gettingstarted {
-  border-radius: 2px;
-  background-color: var(--color-gray-400);
-  border: 2px solid var(--color-gray-400);
-  color: var(--background-color);
+  border-radius: 5px;
+  background-color: var(--color-primary-400);
+  border: 1px solid var(--color-primary-400);
+  color: var(--color-gray-400);
   text-decoration: none;
-  font-weight: 500;
+  font-weight: 400;
   margin-right: 10px;
-  width: 180px;
+  width: 8em;
   display: inline-block;
   text-align: center;
   line-height: 0;
-  padding: 27px 0;
-  transition: all ease 0.2s;
+  padding: 1.2em 0;
+  transition: background-color border ease 0.2s;
 }
 
 .hero__button-download {
-  border-radius: 2px;
-  background-color: var(--color-gray-400);
-  border: 2px solid var(--color-gray-400);
-  color: var(--background-color);
+  border-radius: 5px;
+  background-color: transparent;
+  border: 1px solid var(--color-gray-400);
+  color: var(--color-gray-400);
   text-decoration: none;
-  font-weight: 500;
-  width: 180px;
+  font-weight: 400;
+  width: 8em;
   display: inline-block;
   text-align: center;
   line-height: 0;
-  padding: 27px 0;
-  transition: all ease 0.2s;
+  padding: 1.2em 0;
+  transition: background-color border ease 0.2s;
 }
 
 .hero__button-gettingstarted:hover,
 .hero__button-download:hover {
   background-color: var(--color-primary-500);
-  border-color: var(--color-primary-500);
-  color: var(--background-color);
+  border: 1px solid var(--color-primary-500);
+  color: var(--color-gray-400);
 }
 
 @media only screen and (max-width: 768px) {
@@ -528,14 +557,14 @@ html.simulate-monochromacy .header-primary__button {
     grid-template-columns: 1fr;
   }
   .section-hero {
-    padding: 20px 0 40px;
+    padding: 20px 0 0;
   }
 }
 
 @media only screen and (max-width: 1120px) {
   .hero__buttons {
     font-size: var(--font-size-100);
-    margin-top: 32px;
+    margin-top: 18px;
   }
 
   .hero__button-gettingstarted {
@@ -552,9 +581,14 @@ html.simulate-monochromacy .header-primary__button {
 @media only screen and (max-width: 560px) {
   .hero__content {
     text-align: left;
+    flex-basis: 100%;
+    padding-bottom: 00px;
+  }
+  .hero__map {
+    display: none;
   }
   .section-hero {
-    padding: 0 0 30px;
+    padding: 0 0 40px;
   }
   .hero__button-gettingstarted {
     width: auto;
@@ -580,32 +614,32 @@ html.simulate-monochromacy .header-primary__button {
   padding: 0;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 30px;
-  margin: 10px 0 0;
+  grid-gap: 10px;
+  margin: 40px 0 0;
 }
 
 .section-types {
-  padding: 120px 0;
+  padding: 80px 0;
   margin: 0;
   z-index: 2;
   position: relative;
+  background-color: var(--background-color-secondary);
+  margin-top: -5px;
 }
 
 .types__heading {
-  margin: 16px 0 8px !important;
+  margin: 20px 0 0 !important;
 }
 
 .types__text {
-  max-width: 680px;
+  max-width: 50%;
+  padding-right: 2vw;
 }
 
 .types__item {
   background-color: transparent;
   padding: 20px 0 0;
-  flex: 1;
-  column-gap: 40px;
-  row-gap: 2px;
-  grid-template-columns: 1fr;
+  text-align: center;
 }
 
 .types__item:first-of-type {
@@ -618,14 +652,14 @@ html.simulate-monochromacy .header-primary__button {
 }
 
 .types__image {
-  box-shadow: 0 0 1px black;
   content-visibility: auto;
   box-sizing: content-box;
-  border-radius: 2px;
+  border-radius: 0;
+  width: 100%;
+  display: block;
 }
-
 .types__left p {
-  font-size: var(--font-size-50);
+  font-size: var(--font-size-100);
 }
 
 @media only screen and (max-width: 768px) {
@@ -634,10 +668,13 @@ html.simulate-monochromacy .header-primary__button {
   }
   .types__item {
     display: grid;
-    column-gap: 40px;
-    grid-template-columns: 1fr 1fr;
     border-right-width: 0;
     padding: 15px 0;
+  }
+  .types__right {
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
   }
   .section-types {
     padding: 50px 0;
@@ -646,14 +683,14 @@ html.simulate-monochromacy .header-primary__button {
 
 @media only screen and (max-width: 560px) {
   .section-types {
-    padding: 20px 0;
+    padding: 40px 0;
   }
   .types {
     display: block;
   }
   .types__item {
     grid-template-columns: 1fr;
-    padding: 30px 0;
+    padding: 15px 0;
   }
 }
 
@@ -662,7 +699,11 @@ html.simulate-monochromacy .header-primary__button {
    ========================================================================== */
 
 .section-accessibility {
-  padding: 0 0 120px;
+  padding: 80px 0;
+  background-color: var(--background-color-primary);
+}
+
+.container-accessibility {
   display: flex;
 }
 
@@ -706,17 +747,23 @@ html.simulate-monochromacy .header-primary__button {
 }
 
 @media only screen and (max-width: 1120px) {
+  .types__text {
+    max-width: 80%;
+  }
   .accessibility__image {
     width: 40vw;
   }
 }
 
 @media only screen and (max-width: 768px) {
+  .types__text {
+    max-width: 100%;
+  }
   .accessibility__primary {
     grid-template-columns: 1fr;
   }
   .section-accessibility {
-    padding: 0 0 50px;
+    padding: 40px 0;
     display: block;
   }
   .resources {
@@ -730,6 +777,24 @@ html.simulate-monochromacy .header-primary__button {
 }
 
 @media only screen and (max-width: 560px) {
+  .footer-primary .container {
+    display: flex;
+    flex-direction: column;
+    gap: 4vw;
+  }
+
+  .footer-links {
+    text-align: left;
+  }
+
+  .container {
+    padding: 0 15px;
+  }
+
+  .header-primary__container {
+    padding: 30px 15px;
+  }
+
   .accessibility__secondary {
     grid-template-columns: 1fr;
     padding-top: 30px;
@@ -740,6 +805,36 @@ html.simulate-monochromacy .header-primary__button {
   }
   .resources__link {
     font-size: var(--font-size-100);
+  }
+}
+
+.toggle {
+  position: absolute;
+  right: 8px;
+  bottom: 14px;
+  background-color: var(--background-color-secondary);
+  font-size: var(--font-size-50);
+  z-index: 2;
+}
+
+.toggle label {
+  cursor: pointer;
+  padding: 6px 10px;
+  user-select: none;
+  display: inline-block;
+}
+
+.toggle input {
+  transform: scale(1.25);
+  margin-right: 6px;
+}
+
+@media only screen and (min-width: 1799px) {
+  .hero__map {
+    position: relative;
+  }
+  .toggle {
+    right: -25px;
   }
 }
 
